[package]
name = "lawnnavi"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio-serial = "5.4.4"
rppal = { version = "0.15.0", features = ["hal"] }
tokio = { version = "1.24.1", features = ["rt-multi-thread", "macros"] }

futures = { version = "0.3" }

tokio-util = { version = "0.7.10", features = ["codec"] }

bytes = { version = "1", default-features = false }
nmea = { version = "0.6.0", features = ["GNSS","serde"] }
serde = "1.0.190"
serde_json = "1.0.107"
bno055 = { version = "0.3.3", features = ["serde"] }
linux-embedded-hal = "0.3.2"
mint = { version = "0.5.9", features = ["serde"] }
quaternion-core = "0.4.2"
cgmath = { version = "0.18.0", features = ["mint", "serde"] }

[dev-dependencies.tokio]
version = "^1.8"
features = ["macros", "rt", "process", "time", "fs", "io-util"]
default-features = false

[dev-dependencies.env_logger]
version = "0.10.0"
